--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -90,3 +90,4 @@
 .icon-youtube:before { content: '\e858'; } /* '' */
 .icon-twitter:before { content: '\e859'; } /* '' */
 .icon-instagram:before { content: '\e85a'; } /* '' */
+.icon-calendar:before { content: '\e85b'; } /* '' */
