--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -504,7 +504,7 @@
     window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
   </script>
 
-  <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
+ <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
   <script src="js/lib/lodash.js"></script>
   <script src="js/lib/mousetrap.js"></script>
   <script src="js/lib/jquery.js"></script>
@@ -525,7 +525,7 @@
   <!-- <script src="js/lib/prefixfree.min.js"></script> -->
   <script src="js/lib/md5.min.js"></script>
   <script src="js/lib/jquery.parallax.js"></script>
-  <script src="js/lib/kenburns.js"></script>
+  <script src="js/lib/jquery.bxslider.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
   <!-- custom scripts -->
@@ -548,7 +548,7 @@
   <script src="js/src/events/lj-events-tabview.js"></script>
   <script src="js/src/events/lj-events-create.js"></script>
   <script src="js/src/events/lj-events-map.js"></script>
-  <script src="js/src/admin/lj-admin.js"></script>
+  <script src="js/src/party/lj-party.js"></script>
   <script src="js/src/typeaheads/lj-typeaheads.js"></script>
   <script src="js/src/tour/lj-tour.js"></script>
   <script src="js/src/landing/lj-landing.js"></script>
