--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -100,17 +100,15 @@
       <div class="landing-hero">
         <div class="hero-logo">
           <img src="/img/app/logo.png" width="50" alt="Logo meefore soirées">
+          <div class="hero-logo-name">Meefore</div>
         </div>
         <div class="hero-languages">
           <span data-code="fr" class="no-cb pick-lang hero-lang active">FR</span>
           <span data-code="en" class="no-cb pick-lang hero-lang">EN</span>
         </div>
-        <h1 class="hero-header">
+        <h1 data-lid="lp_subtitle" class="hero-header">
           Meefore
         </h1>
-        <h2 data-lid="lp_subtitle" class="hero-subheader">
-          Rejoignez ou organisez des before avant d'aller en soirée.
-        </h2>
         <div id="facebook_connect">
           <i class="icon icon-facebook"></i>
           <span data-lid="lp_conn_button">Connexion</span>
@@ -137,7 +135,7 @@
       <div data-lid="lp_key_title" class="keypoint-message">L'indispensable mix d'un before réussi</div>
       <img class="keypoint-splitter" src="/img/app/splitter.png" alt="A nice splitter">
       <img src="/img/kb/lp-arrow.png" width="120" alt="Arrow" class="lp-arrow lp-arrow-1">
-      <img src="/img/kb/lp-arrow.png" width="120" alt="Arrow" class="lp-arrow lp-arrow-2">
+      <img src="/img/kb/lp-arrow-reverse.png" width="120" alt="Arrow" class="lp-arrow lp-arrow-2">
       <div class="keypoint-wrap keypoint-1">
         <div class="keypoint-img"><i class="icon icon-keypoint icon-glass"></i></div>
         <div data-lid="lp_key_friends_title" class="keypoint-head">Les amis...</div>
