--- a/public/css/events.css
+++ b/public/css/events.css
@@ -233,7 +233,7 @@ margin-right: 11px;overflow: hidden;text-overflow: ellipsis;}
   font-size: 12px;
   line-height: 1.3;
   text-align: center;
-  /* flex: 1 0 auto; */
+  flex: 1 0 auto;
 }
 .event-preview-address,
 .party-preview-address {
@@ -270,6 +270,7 @@ padding-left: 3px;display: inline-block;font-size: 13px;}
   flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
+  display: none;
 }
 .row-events-filters-group {
   text-align: left;
