--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,6 +62,8 @@ font-size: 14px;text-align: center;color: #ee;}
 	box-shadow: 1px 1px 1px #045519!important;
 	border-radius: 6px 0 6px 0;
 	display: block!important;
+	text-transform: uppercase;
+	font-size: 9px!important;
 }
 
 .full-rotation {
