--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -100,17 +100,15 @@
       <div class="landing-hero">
         <div class="hero-logo">
           <img src="/img/app/logo.png" width="50" alt="Logo meefore soirées">
+          <div class="hero-logo-name">Meefore</div>
         </div>
         <div class="hero-languages">
           <span data-code="fr" class="no-cb pick-lang hero-lang active">FR</span>
           <span data-code="en" class="no-cb pick-lang hero-lang">EN</span>
         </div>
-        <h1 class="hero-header">
+        <h1 data-lid="lp_subtitle" class="hero-header">
           Meefore
         </h1>
-        <h2 data-lid="lp_subtitle" class="hero-subheader">
-          Rejoignez ou organisez des before avant d'aller en soirée.
-        </h2>
         <div id="facebook_connect">
           <i class="icon icon-facebook"></i>
           <span data-lid="lp_conn_button">Connexion</span>
@@ -137,7 +135,7 @@
       <div data-lid="lp_key_title" class="keypoint-message">L'indispensable mix d'un before réussi</div>
       <img class="keypoint-splitter" src="/img/app/splitter.png" alt="A nice splitter">
       <img src="/img/kb/lp-arrow.png" width="120" alt="Arrow" class="lp-arrow lp-arrow-1">
-      <img src="/img/kb/lp-arrow.png" width="120" alt="Arrow" class="lp-arrow lp-arrow-2">
+      <img src="/img/kb/lp-arrow-reverse.png" width="120" alt="Arrow" class="lp-arrow lp-arrow-2">
       <div class="keypoint-wrap keypoint-1">
         <div class="keypoint-img"><i class="icon icon-keypoint icon-glass"></i></div>
         <div data-lid="lp_key_friends_title" class="keypoint-head">Les amis...</div>
@@ -494,7 +492,6 @@
         </div>
       </div>
 
-
     </section>
 
   </div>
@@ -504,7 +501,7 @@
     window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
   </script>
 
- <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
+  <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
   <script src="js/lib/lodash.js"></script>
   <script src="js/lib/mousetrap.js"></script>
   <script src="js/lib/jquery.js"></script>
@@ -567,3 +564,4 @@
 </body>
 
 </html>
+  
