--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -91,3 +91,4 @@
 .icon-twitter:before { content: '\e859'; } /* '' */
 .icon-instagram:before { content: '\e85a'; } /* '' */
 .icon-calendar:before { content: '\e85b'; } /* '' */
+.icon-power:before { content: '\e85c'; } /* '' */
