--- a/public/css/events.css
+++ b/public/css/events.css
@@ -150,9 +150,7 @@ i.icon-create {
 .event-preview-hosts,
 .party-preview-hosts {
    text-align: left;
-   margin-right: 16px;
-   vertical-align: middle;
-   display: inline-block;
+   flex: 1 0 auto;
 }
 .event-preview-host-picture {
 display: inline-block;margin: 0 4px;
@@ -166,6 +164,7 @@ position: relative;}
   display: flex;
   flex-direction: column;
   text-align: center;
+  flex: 2 0 auto;
 }
 .party-preview-details--sub div {
   flex: 1 0 auto;
@@ -182,7 +181,7 @@ background-size: cover;
 height: 45px;
 border-radius: 40px;
 background-position: center center;
-background-repeat: no-repeat;}
+background-repeat: no-repeat;margin-left: 20px;}
 
 .party-preview-picture img {border-radius: 30px;text-align: center;}
 
@@ -217,15 +216,13 @@ margin-right: 9px;
 .event-preview-details,
 .party-preview-details{
 text-align: left;display: inline-block;
-vertical-align: middle;
-margin-right: 11px;overflow: hidden;text-overflow: ellipsis;}
+vertical-align: middle;/* margin-right: 11px; */overflow: hidden;text-overflow: ellipsis;flex: 1 0 auto;}
 .party-preview-details {
   padding: 10px;
   display: flex;
   /* flex: 1 0 auto; */
   align-items: center;
   justify-content: space-around;
-  width: 100%;
 } 
 .party-preview-place-name {*/
   font-size: 14px;
@@ -233,7 +230,7 @@ margin-right: 11px;overflow: hidden;text-overflow: ellipsis;}
   font-size: 12px;
   line-height: 1.3;
   text-align: center;
-  flex: 1 0 auto;
+  flex: 1 0 100px;
 }
 .event-preview-address,
 .party-preview-address {
@@ -435,6 +432,7 @@ transition: all ease-out .3s;position: relative;top: -2px;right: 4px;color: #999
   right: 0;
   top: 17px;
   right: 14px;
+  height: 33px;
 }
 .btn-preview-undo {
 	font-weight: bolder;
@@ -567,11 +565,8 @@ border-radius: 5px 5px 0 0;top: 0px;}
   background: #;
 }
 .preview-date {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 15px;
+  flex: 0 0 54px;
   text-align: center;
-  /* top: 1px; */
 }
 .preview-date-month {
   
