--- a/public/css/fontello/css/online.css
+++ b/public/css/fontello/css/online.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: 'fontello';
-  src: url('../font/fontello.eot?5840320');
-  src: url('../font/fontello.eot?5840320#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?5840320') format('woff'),
-       url('../font/fontello.ttf?5840320') format('truetype'),
-       url('../font/fontello.svg?5840320#fontello') format('svg');
+  font-family: 'online';
+  src: url('../font/online.eot?36184018');
+  src: url('../font/online.eot?36184018#iefix') format('embedded-opentype'),
+       url('../font/online.woff?36184018') format('woff'),
+       url('../font/online.ttf?36184018') format('truetype'),
+       url('../font/online.svg?36184018#online') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -13,14 +13,14 @@
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
-    font-family: 'fontello';
-    src: url('../font/fontello.svg?5840320#fontello') format('svg');
+    font-family: 'online';
+    src: url('../font/online.svg?36184018#online') format('svg');
   }
 }
 */
  
  [class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "fontello";
+  font-family: "online";
   font-style: normal;
   font-weight: normal;
   speak: none;
@@ -147,3 +147,5 @@
 .icon-instagram:before { content: '\e85a'; } /* '' */
 .icon-calendar:before { content: '\e85b'; } /* '' */
 .icon-power:before { content: '\e85c'; } /* '' */
+.icon-tag:before { content: '\e85d'; } /* '' */
+.icon-hash:before { content: '\e85e'; } /* '' */
