--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -14,14 +14,32 @@ position: absolute;width: 100px;}
 left: 33%;top: 180px;} 
 
 .lp-arrow-2 {
-  right: 33%;
-  bottom: 140px;
+  
+right: 33%;
+  
+bottom: 140px;
 }
 
 .hero-logo-name {
-  font-family: 'Gochi Hand';
-  color: white;
+  
+font-family: 'Gochi Hand';
+  
+color: white;
 }
+
+
+.lp-avant {
+  width: 100px;
+  display: inline-block;
+  position: relative;
+}
+
+.lp-avant img {
+  position: absolute;
+  bottom: -20px;
+  left: -5px;
+}
+
 
 .etiquette {
    background: rgba(255, 255, 255, 0.81);
@@ -74,7 +92,7 @@ left: 33%;top: 180px;}
    transition: all .5s;
    text-align: center;
    font-family: Alegreya Sans SC;
-   margin-top: 60px;
+   margin-top: 38px;
 }
 
 #facebook_connect:hover .fb-overlay {
@@ -179,7 +197,16 @@ left: 33%;top: 180px;}
     justify-content: center;
 }
 
-.hero-header {font: bold 37px 'Alegreya Sans SC';text-align: center;color: white;}
+.lp-subpart {
+
+margin: 10px 0;
+}
+.lp-subpart:nth-child(1){
+}
+.lp-subpart:nth-child(2){
+}
+
+.hero-header {font-family: Pacifico;text-align: center;color: white;line-height: 50px;/* text-transform: uppercase; *//* letter-spacing: .5px; */font-weight: bold;font-weight: normal;font-size: 40px;}
 
 .hero-subheader {text-align: center;font: normal 28px 'Alegreya Sans Sc';text-shadow: 0 1px 1px #575757;color: white;text-transform: none;margin-top: 25px;letter-spacing: -.5px;line-height: 45px;}
 .hero-subheader span {
@@ -218,7 +245,7 @@ left: 33%;top: 180px;}
    z-index: 4;
    height: 100%;
    width: 100%;
-   background: rgba(0, 0, 0, 0.50);
+   background: rgba(0, 0, 0, 0.60);
    position: absolute;
 }
 /* End Kenbuns Styles */
@@ -346,18 +373,18 @@ left: 33%;top: 180px;}
    margin: 20px 30px 110px;
    vertical-align: top;
    border-radius: 300px;
-   background: #eee;
+   background: white;
 }
 
 .keypoint-message {
    margin-top: 50px;
    /* font-family: 'Gochi Hand'; */
-   font-weight: bolder;
-   font-family: 'Alegreya Sans Sc';
+   /* font-weight: bolder; */
+   font-family: 'Pacifico';
    text-shadow: 0 1px 1px #DADADA;
    /* font-family: 'Merriweather'; */
-   font-size: 26px;
-   color: black;
+   font-size: 30px;
+   color: #4E4E4E;
 }
 
 .keypoint-splitter {
@@ -368,15 +395,19 @@ left: 33%;top: 180px;}
 }
 
 .keypoint-1 {
-
 }
 
 .keypoint-2 {
    
+background: #e94f6a;
+   
+color: white;
 }
 
+.keypoint-2 p {
+  color: white;
+}
 .keypoint-3 {
-   
 }
 
 .keypoint-button {padding: 10px 30px;border: none;outline: none;font: bold 13px 'Alegreya sans Sc';background: #FFFFFF;border: 1px solid;color: #575757;margin-top: 20px;width: 150px;}
@@ -453,6 +484,7 @@ left: 33%;top: 180px;}
    -o-animation: movingarrow .8s 1s infinite alternate linear;/* Opera 12+ */
    animation: movingarrow .8s 1s infinite alternate linear;
    cursor: pointer;
+   background: rgba(255, 255, 255, 0.09);
 }
 
 @-webkit-keyframes movingarrow {
@@ -549,17 +581,13 @@ color: #595959;
   color: #E4E4E4;
   position: absolute;
   bottom: 20px;
-  left:20px;
+  left: 22px;
   z-index: 10;
-  font-family: 'Alegreya sans sc';
+  font-family: Alegreya Sans SC;
   font-size: 16px;
 }
 
-.landing-places-wrap .icon {
+.landing-places-wrap .lp-places-hash {
 color: #e94f6a;
-position: relative;
-font-size: 17px;
-top: 2px;
-left: -3px;
-font-family: 'Lato';
-}
+position: relative;font-size: 15px;top: 0px;
+left: -3px;font-family: 'Pacifico';display: inline;}
