--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -15,8 +15,8 @@
   <link href='https://fonts.googleapis.com/css?family=Karla:700,400' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,500,600,700,800,900' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-
+  <link href='https://fonts.googleapis.com/css?family=Pacifico:400,500,600,700' rel='stylesheet' type='text/css'>
+  
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/joyride.css">
   <link rel="stylesheet" href="/css/reset.css">
@@ -89,9 +89,11 @@
       <div class="landing-kenburns">
         <div class="kenburns-overlay"></div>
         <ul class="bxslider">
-          <li><img src="/img/kb/bg1-min.jpg" width="100%"/></li>
-          <li><img src="/img/kb/bg2-min.jpg" width="100%"/></li>
-          <li><img src="/img/kb/bg6-min.jpg" width="100%"/></li>
+          <li><img src="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp1.jpg" width="100%"/></li>
+          <li><img src="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp3.jpg" width="100%"/></li>
+          <li><img src="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp5.jpg" width="100%"/></li>
+          <li><img src="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp2.jpg" width="100%"/></li>
+          <li><img src="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp4.jpg" width="100%"/></li>
         </ul>
       </div>
       <!-- end landing kenburns -->
@@ -100,14 +102,13 @@
       <div class="landing-hero">
         <div class="hero-logo">
           <img src="/img/app/logo.png" width="50" alt="Logo meefore soirées">
-          <div class="hero-logo-name">Meefore</div>
+          <div class="hero-logo-name">meefore</div>
         </div>
         <div class="hero-languages">
           <span data-code="fr" class="no-cb pick-lang hero-lang active">FR</span>
           <span data-code="en" class="no-cb pick-lang hero-lang">EN</span>
         </div>
         <h1 data-lid="lp_subtitle" class="hero-header">
-          Meefore
         </h1>
         <div id="facebook_connect">
           <i class="icon icon-facebook"></i>
@@ -122,7 +123,10 @@
       <!-- end Moving arrow -->
 
        <!-- landing places -->
-      <div class="landing-places-wrap"><i class="icon icon-location"></i><span class="landing-places"></span></div>
+      <div class="landing-places-wrap">
+        <div class="lp-places-hash">#</div>
+        <span class="landing-places"></span>
+      </div>
       <!-- end landing places  -->
 
     </div>
@@ -216,7 +220,7 @@
       </div>
       <div id="thumbInfos">
         <h2 id="thumbName"></h2>
-        <span id="logout" class="action"><i class="icon icon-forward-1"></i></span>
+        <span id="logout" class="action"><i class="icon icon-power"></i></span>
       </div>
     </section>
 
