--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -15,8 +15,8 @@
   <link href='https://fonts.googleapis.com/css?family=Karla:700,400' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,500,600,700,800,900' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-
+  <link href='https://fonts.googleapis.com/css?family=Pacifico:400,500,600,700' rel='stylesheet' type='text/css'>
+  
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/joyride.css">
   <link rel="stylesheet" href="/css/reset.css">
@@ -89,9 +89,11 @@
       <div class="landing-kenburns">
         <div class="kenburns-overlay"></div>
         <ul class="bxslider">
-          <li><img src="/img/kb/bg1-min.jpg" width="100%"/></li>
-          <li><img src="/img/kb/bg2-min.jpg" width="100%"/></li>
-          <li><img src="/img/kb/bg6-min.jpg" width="100%"/></li>
+          <li><img src="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp1.jpg" width="100%"/></li>
+          <li><img src="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp3.jpg" width="100%"/></li>
+          <li><img src="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp5.jpg" width="100%"/></li>
+          <li><img src="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp2.jpg" width="100%"/></li>
+          <li><img src="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp4.jpg" width="100%"/></li>
         </ul>
       </div>
       <!-- end landing kenburns -->
@@ -100,17 +102,14 @@
       <div class="landing-hero">
         <div class="hero-logo">
           <img src="/img/app/logo.png" width="50" alt="Logo meefore soirées">
+          <div class="hero-logo-name">meefore</div>
         </div>
         <div class="hero-languages">
           <span data-code="fr" class="no-cb pick-lang hero-lang active">FR</span>
           <span data-code="en" class="no-cb pick-lang hero-lang">EN</span>
         </div>
-        <h1 class="hero-header">
-          Meefore
+        <h1 data-lid="lp_subtitle" class="hero-header">
         </h1>
-        <h2 data-lid="lp_subtitle" class="hero-subheader">
-          Rejoignez ou organisez des before avant d'aller en soirée.
-        </h2>
         <div id="facebook_connect">
           <i class="icon icon-facebook"></i>
           <span data-lid="lp_conn_button">Connexion</span>
@@ -124,7 +123,10 @@
       <!-- end Moving arrow -->
 
        <!-- landing places -->
-      <div class="landing-places-wrap"><i class="icon icon-location"></i><span class="landing-places"></span></div>
+      <div class="landing-places-wrap">
+        <div class="lp-places-hash">#</div>
+        <span class="landing-places"></span>
+      </div>
       <!-- end landing places  -->
 
     </div>
@@ -137,7 +139,7 @@
       <div data-lid="lp_key_title" class="keypoint-message">L'indispensable mix d'un before réussi</div>
       <img class="keypoint-splitter" src="/img/app/splitter.png" alt="A nice splitter">
       <img src="/img/kb/lp-arrow.png" width="120" alt="Arrow" class="lp-arrow lp-arrow-1">
-      <img src="/img/kb/lp-arrow.png" width="120" alt="Arrow" class="lp-arrow lp-arrow-2">
+      <img src="/img/kb/lp-arrow-reverse.png" width="120" alt="Arrow" class="lp-arrow lp-arrow-2">
       <div class="keypoint-wrap keypoint-1">
         <div class="keypoint-img"><i class="icon icon-keypoint icon-glass"></i></div>
         <div data-lid="lp_key_friends_title" class="keypoint-head">Les amis...</div>
@@ -218,7 +220,7 @@
       </div>
       <div id="thumbInfos">
         <h2 id="thumbName"></h2>
-        <span id="logout" class="action"><i class="icon icon-forward-1"></i></span>
+        <span id="logout" class="action"><i class="icon icon-power"></i></span>
       </div>
     </section>
 
@@ -494,12 +496,11 @@
         </div>
       </div>
 
-
     </section>
 
   </div>
   
-  <script id="app_ids"> 
+ <script id="app_ids"> 
      window.facebook_app_id = "1509405206012202";
      window.pusher_app_id   = "e0e801db688ab26d8581";
   </script>
@@ -525,7 +526,7 @@
   <!-- <script src="js/lib/prefixfree.min.js"></script> -->
   <script src="js/lib/md5.min.js"></script>
   <script src="js/lib/jquery.parallax.js"></script>
-  <script src="js/lib/kenburns.js"></script>
+  <script src="js/lib/jquery.bxslider.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
   <!-- custom scripts -->
@@ -548,7 +549,7 @@
   <script src="js/src/events/lj-events-tabview.js"></script>
   <script src="js/src/events/lj-events-create.js"></script>
   <script src="js/src/events/lj-events-map.js"></script>
-  <script src="js/src/admin/lj-admin.js"></script>
+  <script src="js/src/party/lj-party.js"></script>
   <script src="js/src/typeaheads/lj-typeaheads.js"></script>
   <script src="js/src/tour/lj-tour.js"></script>
   <script src="js/src/landing/lj-landing.js"></script>
@@ -567,3 +568,4 @@
 </body>
 
 </html>
+  
